@@ -5,6 +5,7 @@ import com.kulturman.irembotest.domain.application.entities.Certificate;
 import com.kulturman.irembotest.domain.application.entities.Template;
 import com.kulturman.irembotest.domain.entities.CertificateStatus;
 import com.kulturman.irembotest.domain.exceptions.TemplateNotFoundException;
+import com.kulturman.irembotest.domain.ports.CertificateQueue;
 import com.kulturman.irembotest.domain.ports.TenancyProvider;
 import com.kulturman.irembotest.infrastructure.persistence.InMemoryCertificateRepository;
 import com.kulturman.irembotest.infrastructure.persistence.InMemoryTemplateRepository;
@@ -18,12 +19,15 @@ import java.util.Map;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class CertificateServiceTest {
     @Mock
     TenancyProvider tenancyProvider;
+
+    @Mock
+    CertificateQueue certificateQueue;
 
     InMemoryTemplateRepository templateRepository;
     InMemoryCertificateRepository certificateRepository;
@@ -36,7 +40,7 @@ public class CertificateServiceTest {
         templateRepository = new InMemoryTemplateRepository();
         certificateRepository = new InMemoryCertificateRepository();
         objectMapper = new ObjectMapper();
-        certificateService = new CertificateService(tenancyProvider, templateRepository, certificateRepository, objectMapper);
+        certificateService = new CertificateService(tenancyProvider, templateRepository, certificateRepository, certificateQueue, objectMapper);
         when(tenancyProvider.getCurrentTenantId()).thenReturn(tenantId);
     }
 
@@ -64,11 +68,39 @@ public class CertificateServiceTest {
         assertEquals(templateId, certificate.getTemplateId());
         assertEquals(CertificateStatus.QUEUED, certificate.getStatus());
         assertEquals(tenantId, certificate.getTenantId());
-        assertTrue(certificate.getVariables().contains("Arnaud BAKYONO"));
+
+        assertEquals("[{\"key\":\"name\",\"value\":\"Arnaud BAKYONO\"}]", certificate.getVariables());
 
         assertEquals(1, certificateRepository.getSavedCertificates().size());
-        Certificate savedCertificate = certificateRepository.getSavedCertificates().get(0);
+        Certificate savedCertificate = certificateRepository.getSavedCertificates().getFirst();
         assertEquals(certificate.getId(), savedCertificate.getId());
+    }
+
+    @Test
+    void shouldPublishCertificateToQueueAfterSaving() {
+        var templateId = UUID.randomUUID();
+        templateRepository.addTemplate(
+            Template.builder()
+                .id(templateId)
+                .tenantId(tenantId)
+                .name("Certificate Template")
+                .content("Certificate for {name}")
+                .variables("[\"name\"]")
+                .build()
+        );
+
+        var request = GenerateCertificateRequest.builder()
+            .templateId(templateId)
+            .variables(Map.of("name", "Arnaud BAKYONO"))
+            .build();
+
+        Certificate certificate = certificateService.generateCertificate(request);
+
+        verify(certificateQueue).publish(any(Certificate.class));
+        verify(certificateQueue).publish(argThat(cert ->
+            cert.getId().equals(certificate.getId()) &&
+            cert.getStatus() == CertificateStatus.QUEUED
+        ));
     }
 
     @Test
